--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,3 +40,9 @@ en:
     target:
       errors:
         targets_per_user_limit: Target per user limit exceeded. Max allowed is %{limit}
+  devise:
+    mailer:
+      reset_password_instructions:
+        intro_message: Hello %{email}!
+        content: Someone has requested a link to change your password. You can do this through the link below.
+        link_text: Change my password
